# Phi-Programming-Lang

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  README.md  Result.phi  build  build.sh  compile_commands.json  meson.build  output  program.phi  run_tests.sh  temp.phi
Save/lib/: TypeChecker.hpp
Save/lib/CodeGen/: CodeGen.hpp
Save/lib/TypeInference/: Infer.hpp  TypeEnv.hpp
Save/lib/TypeInference/Types/: Monotype.hpp  MonotypeAtoms.hpp
Save/src/CodeGen/: CodeGen.cpp
Save/src/CodeGen/Decls/: Decls.cpp  Enums.cpp  Structs.cpp
Save/src/CodeGen/Exprs/: Calls.cpp  Literals.cpp  Ops.cpp  StructExprs.cpp
Save/src/TypeCheck/: CheckDecl.cpp  CheckStmt.cpp
Save/src/TypeCheck/CheckExpr/: CheckExpr.cpp  CheckLiterals.cpp  CheckOps.cpp
Save/src/TypeInference/: TypeEnv.cpp
Save/src/TypeInference/Inferencer/: Infer.cpp  InferDecl.cpp  (+3 more)
Save/test/: TypeInference.cpp
example-code/: 1.phi  10.phi  11.phi  12.phi  13.phi  14.phi  15.phi  2.phi  3.phi  4.phi  5.phi  6.phi  7.phi  8.phi  9.phi  error1.phi  error2.phi  error3.phi  error4.phi  error5.phi  error6.phi  expression.phi  loops.phi  main.phi  semicolon_comprehensive.phi  simple.phi  structs.phi  test_semicolon.phi
examples/: Enum.phi  Result.phi  Tuples.phi  Vector.phi  cf.phi  enum.phi  fun.phi  loops.phi  ops.phi  struct.phi  struct2.phi  tuples.phi  vector.phi
include/: SrcLocation.hpp  ast-util.hpp  ast.hpp  parser.hpp  scanner.hpp  sema.hpp  token.hpp  token_types.hpp
include/AST/: ASTVisitor.hpp  Decl.hpp  Expr.hpp  Pattern.hpp  Stmt.hpp  Temp.hpp  Type.hpp
include/AST/Nodes/: Decl.hpp  Expr.hpp  Stmt.hpp
include/AST/TypeSystem/: Context.hpp  Type.hpp  Type.hpp.bak
include/CodeGen/: CodeGen.hpp  LLVMCodeGen.hpp
include/Diagnostics/: Diagnostic.hpp  DiagnosticBuilder.hpp  DiagnosticManager.hpp
include/Driver/: Driver.hpp  PhiBuildSystem.hpp  PhiProject.hpp
include/Lexer/: Lexer.hpp  Token.hpp  TokenKind.hpp  TokenType.hpp
include/Parser/: Parser.hpp  PrecedenceTable.hpp
include/Sema/: NameResolver.hpp  Sema.hpp  SymbolTable.hpp  TypeChecker.hpp
include/Sema/HMTI/: Algorithms.hpp  HMType.hpp  Infer.hpp  Substitution.hpp  TypeEnv.hpp  TypeVarFactory.hpp  Unify.hpp
include/Sema/NameResolution/: NameResolver.hpp  SymbolTable.hpp
include/Sema/TypeInference/: Algorithms.hpp  Infer.hpp  Inferencer.hpp  Substitution.hpp  TypeEnv.hpp  Unifier.hpp  Unify.hpp
include/SrcManager/: SrcLocation.hpp  SrcManager.hpp  SrcSpan.hpp
src/: ast.cpp  ast.rs  diag.rs  driver.rs  interner.rs  lexer.rs  main.cpp  main.rs  parser.cpp  parser.rs  scanner.cpp  sema.cpp  token.cpp
src/AST/: Decl.cpp  Expr.cpp  Stmt.cpp  Type.cpp
src/AST/Context/: Context.cpp  Hash.cpp
src/CodeGen/: Calls.cpp  CodeGen.cpp  ControlFlow.cpp  Decls.cpp  LLVMCodeGen.cpp  LLVMCodeGenDecls.cpp  LLVMCodeGenDiscovery.cpp  LLVMCodeGenExprs.cpp  LLVMCodeGenMono.cpp  LLVMCodeGenStmts.cpp  Literals.cpp  Ops.cpp  Println.cpp  Stmts.cpp
src/CodeGen/Decls/: Enums.cpp  Functions.cpp  Structs.cpp
src/CodeGen/Expr/: Calls.cpp  Literals.cpp  Ops.cpp  StructExprs.cpp  StructInit.cpp  StructMemberExpr.cpp
src/CodeGen/Exprs/: Calls.cpp  Literals.cpp  Ops.cpp  StructExprs.cpp
src/CodeGen/Stmts/: Stmts.cpp
src/CodeGen/Utils/: ControlFlow.cpp  MemoryManagement.cpp
src/Diagnostics/: DiagnosticBuilder.cpp  DiagnosticManager.cpp
src/Driver/: Driver.cpp  PhiBuildSystem.cpp  PhiProject.cpp
src/Lexer/: Comments.cpp  Lexer.cpp  Literals.cpp  Token.cpp  TokenKind.cpp  TokenType.cpp  token.cpp
src/Parser/: ParseBlock.cpp  ParseDecl.cpp  ParseEnum.cpp  ParseError.cpp  ParseErrors.cpp  ParseExpr.cpp  ParseList.cpp  ParsePattern.cpp  ParseStmt.cpp  ParseStruct.cpp  ParseType.cpp  Parser.cpp  TokenManip.cpp
src/Parser/ParseDecl/: ParseItem.cpp  ParseLocal.cpp  ParseMember.cpp
src/Parser/ParseExpr/: ParseExpr.cpp  ParseNud.cpp
src/Parser/ParseStmt/: ParseBlock.cpp  ParseStmt.cpp
src/Sema/: Sema.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaStmt.cpp  SemaStruct.cpp  SemaType.cpp  SymbolTable.cpp
src/Sema/HMTI/: Infer.cpp  InferDecl.cpp  InferExpr.cpp  InferStmt.cpp  Types.cpp
src/Sema/NameResolution/: NameResolutionErrors.cpp  NameResolver.cpp  ResolveDecl.cpp  ResolveExpr.cpp  ResolveStmt.cpp  ResolveStructExpr.cpp  ResolveType.cpp
src/Sema/NameResolver/: ResolveStruct.cpp
src/Sema/SemaDecl/: SemaFunDecl.cpp  SemaStructDecl.cpp
src/Sema/SymbolTable/: FindClosestSymbol.cpp  SymbolTable.cpp
src/Sema/TypeCheck/: Check.cpp  CheckDecl.cpp  CheckStmt.cpp
src/Sema/TypeInference/: Infer.cpp  InferDecl.cpp  InferExpr.cpp  InferStmt.cpp  Substitution.cpp  Types.cpp
src/SrcManager/: SrcManager.cpp
src/ast/: expr_impls.rs  type_impls.rs
src/driver/: compiler.rs  file_collector.rs  src_file.rs  src_map.rs
src/lexer/: src_span.rs  token.rs
src/parser/: block_parser.rs  expr_parser.rs  item_parser.rs  pattern_parser.rs  type_parser.rs
std/: Option.phi  Result.phi
test/integration/: IntegrationTest.cpp  MonomorphizationTest.cpp  StructCodeGenTest.cpp  TypeInference.cpp
test/unit/: ControlFlowTest.cpp  OpCodeGenTest.cpp  ParserTest.cpp  README.md  StructCodeGenTest.cpp  TypeInference.cpp
test/unit/Lexer/: LexerTest.cpp
test/unit/NameResolver/: NameResolverTest.cpp
test/unit/Parser/: ParserTest.cpp
test/unit/TypeInference/: TypeInferenceTest.cpp
tests/: README.md  TESTING_GUIDE.md  golden.rs
tests/correct/: 1.ll  4.phi  5.phi  6.phi  7.phi  8.ll  8.phi  9.ll  9.phi  basic_function.phi  complete_program.phi  comprehensive_control_flow.phi  control_flow.phi  minimal_break.phi  minimal_defer.phi  minimal_return.phi  simple_control.phi  variables.phi
tests/fixtures/closures_and_fn_types/: expected.txt  main.phi
tests/fixtures/parse_error_recovery/: expected.txt  main.phi
tests/fixtures/valid_function/: expected.txt  main.phi
tests/incorrect/: 1.ll  1.phi  10.phi  11.phi  12.phi  13.phi  2.phi  3.phi  4.phi  5.phi  6.phi  7.phi  8.phi  9.phi  complete_broken_program.phi  edge_cases.phi  invalid_control_flow.phi  invalid_functions.phi  invalid_variables.phi  missing_braces.phi  missing_semicolons.phi  mixed_errors.phi
(+48 files in other folders)
